Fixed the z-index and margin of button

--- a/main.css
+++ b/main.css
@@ -12,7 +12,6 @@ ul{
 	text-align: center;
 	margin-bottom: 40px;
 	position: relative;
-	padding-top: 30px;
 }
 ul.sticky{
 	width: 100%;
@@ -20,9 +19,8 @@ ul.sticky{
 	text-align: center;
 	background: #00f;
 	position: fixed;
-	z-index: 1;
+	z-index: 2;
 	background-color: #eee;
-	padding: 10px;
 }
 
 ul.nav li{
@@ -33,20 +31,24 @@ li a {
 	display: inline-block;
 }
 img.logo{
+	margin-top: 50px;
 	margin-left: 20%;
 	height: 80px; 
 	width:80px;
 }
 
 img.logo.sticky{
+	margin-top: 5px;
 	margin-left: 20%;
 	width: 50px;
 	height: 50px;
+	z-index: 4;
 }
 .top{
-	margin: 12px;
+	margin: 10px;
+	margin-top: 30px;
 	height: 32px;
-	width: 132px;
+	width: 136px;
 	border-radius: 4px;
 	background-color: #ebebeb;
 	border-color: #bbb;
@@ -56,7 +58,7 @@ img.logo.sticky{
 	color: #444;
 }
 .pull-right{
-	margin-right: 20px;
+	margin-right: 30px;
 }
 .col-sm-6{
 	text-align: center;
@@ -76,6 +78,9 @@ img.logo.sticky{
 }
 .right.carousel-control, .left.carousel-control {
       display: none;
+}
+.carousel-indicators{
+	z-index: 1;
 }
 .item h3{
 	padding: 80px;
